--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,10 +1,10 @@
 ---
   # CATALINA_BASE is the instance directory
-- name: Configure CATALINA_BASE
+- name: CATALINA_BASE dirs (root owned)
   become: true
   file:
     path: "{{ tomcat_catalina_base ~ '/' ~ item }}"
-    owner: "{{ tomcat_user }}"
+    owner: "root"
     group: "{{ tomcat_group }}"
     mode: "u=rwx,g=rx,o="
     state: directory
@@ -15,16 +15,49 @@
     - "conf/Catalina"           # assumes engine name is catalina
     - "conf/Catalina/localhost" # assumes virtual host is localhost
     - "lib"
-    - "logs"
     - "shared"
     - "shared/classes"
     - "shared/lib"
-    - "temp"
     - "webapps"
+  notify: Restart Tomcat
+
+- name: CATALINA_BASE dirs (tomcat owned)
+  become: true
+  file:
+    path: "{{ tomcat_catalina_base ~ '/' ~ item }}"
+    group: "{{ tomcat_group }}"
+    owner: "{{ tomcat_user }}"
+    mode: "u=rwx,g=rx,o="
+    state: directory
+  with_items:
+    - "logs"
+    - "temp"
     - "work"
   notify: Restart Tomcat
 
-- name: Copy Tomcat Configuration (if not present)
+- name: Tomcat Configuration (server.xml)
+  become: true
+  template:
+    src: "{{ tomcat_server_xml_template }}"
+    dest: "{{ tomcat_catalina_base ~ '/conf/server.xml' }}"
+    group: "{{ tomcat_group }}"
+    owner: "root"
+    mode: "u=rw,g=r,o="
+  when: tomcat_server_xml_template is defined
+  notify: Restart Tomcat
+
+- name: Tomcat Configuration (web.xml)
+  become: true
+  template:
+    src: "{{ tomcat_web_xml_template }}"
+    dest: "{{ tomcat_catalina_base ~ '/conf/web.xml' }}"
+    group: "{{ tomcat_group }}"
+    owner: "root"
+    mode: "u=rw,g=r,o="
+  when: tomcat_web_xml_template is defined
+  notify: Restart Tomcat
+
+- name: Tomcat Configuration (common, if not present)
   become: true
   copy:
     src: "{{ tomcat_catalina_home ~ '/' ~ item }}"
@@ -32,7 +65,7 @@
     remote_src: true
     force: false
     group: "{{ tomcat_group }}"
-    owner: "{{ tomcat_user }}"
+    owner: "root"
     mode: "u=rw,g=r,o="
   with_items:
     - conf/catalina.policy
@@ -44,7 +77,7 @@
     - conf/web.xml
   notify: Restart Tomcat
 
-- name: Copy Tomcat Configuration 8.5/9 (if not present)
+- name: Tomcat Configuration 8.5/9 (if not present)
   become: true
   copy:
     src: "{{ tomcat_catalina_home ~ '/' ~ item }}"
@@ -52,7 +85,7 @@
     remote_src: true
     force: false
     group: "{{ tomcat_group }}"
-    owner: "{{ tomcat_user }}"
+    owner: "root"
     mode: "u=rw,g=r,o="
   with_items:
     - conf/jaspic-providers.xml
@@ -60,7 +93,7 @@
   when: "(tomcat_version is version_compare('8.5.0','>='))"
   notify: Restart Tomcat
 
-- name: Copy Tomcat Logging Configuration (if log4j2 not enabled)
+- name: Tomcat Logging Configuration (if log4j2 not enabled)
   become: true
   copy:
     src: "{{ tomcat_catalina_home ~ '/conf/logging.properties' }}"
@@ -68,7 +101,7 @@
     remote_src: true
     force: false
     group: "{{ tomcat_group }}"
-    owner: "{{ tomcat_user }}"
+    owner: "root"
     mode: "u=rw,g=r,o="
   when: not (tomcat_log4j2_enable | bool)
   notify: Restart Tomcat
@@ -79,7 +112,7 @@
     dest: "{{ tomcat_catalina_base ~ '/conf/catalina.properties' }}"
     backrefs: true
     group: "{{ tomcat_group }}"
-    owner: "{{ tomcat_user }}"
+    owner: "root"
     mode: "u=rw,g=r,o="
     line: 'shared.loader="${catalina.base}/shared","${catalina.base}/shared/*.jar","${catalina.home}/shared","${catalina.home}/shared/*.jar"'
     regexp: "^shared.loader="
