Remove Debian/Ubuntu until containers updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ env:
     - distro: centos7
     #- distro: centos6 Disabled until upstream Dockerfile change to support SNI merged
     #- distro: fedora27
-    - distro: ubuntu1804
+    #- distro: ubuntu1804
     #- distro: ubuntu1604
     #- distro: ubuntu1404
     #- distro: ubuntu1204
-    - distro: debian9
+    #- distro: debian9
     #- distro: debian8
 
 language: ruby
