--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,14 @@ repos:
     -   id: check-case-conflict
     -   id: check-json
     -   id: end-of-file-fixer
+-   repo: https://github.com/adrienverge/yamllint.git
+    rev: v1.12.0
+    hooks:
+    -   id: yamllint
+-   repo: https://github.com/jumanjihouse/pre-commit-hooks.git
+    rev: 1.10.2
+    hooks:
+    -   id: rubocop
 -   repo: https://github.com/willthames/ansible-lint.git
     rev: v3.4.23
     hooks:
