--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -7,12 +7,12 @@
     group: root
     owner: root
     mode: "u=rw,go=r"
-  notify:
-    - Systemd Daemon-Reload
-    - Restart Tomcat
   when:
     - tomcat_service_manage | bool
     - ansible_service_mgr == 'systemd'
+  notify:
+    - Systemd Daemon-Reload
+    - Restart Tomcat
 
 - name: Service on Boot
   become: true
@@ -21,10 +21,10 @@
     enabled: "{{ tomcat_service_enable | bool }}"
   when: tomcat_service_manage | bool
 
-- name: Service State
-  become: true
-  service:
-    name: tomcat
-    state: "{{ tomcat_service_state }}"
-  register: _tomcat_service_state
-  when: tomcat_service_manage | bool
+- name: Desired State
+  debug:
+    msg: "Desired state: {{ tomcat_service_state }}"
+  when:
+    - tomcat_service_manage
+  notify:
+    - "{{ 'Restart' if tomcat_service_state == 'restarted' else 'Start' }} Tomcat"
