--- a/molecule/default/requirements.yml
+++ b/molecule/default/requirements.yml
@@ -2,5 +2,7 @@
 # From Galaxy
 - src: 'bdellegrazie.ansible-role-serverspec_test_dependencies'
   version: 'v0.0.9'
+- src: 'geerlingguy.repo-epel'
+  version: '1.2.3'
 - src: 'geerlingguy.java'
   version: '1.9.2'
