--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -6,7 +6,7 @@
   become: true
   package:
     name: "{{ item }}"
-    state: latest
+    state: present
   with_items: "{{ tomcat_dependencies }}"
   notify: Restart Tomcat
 
