--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -30,6 +30,18 @@ provisioner:
     name: ansible-lint
 scenario:
   name: default
+  test_sequence:
+    - lint
+    - destroy
+    - dependency
+    - syntax
+    - create
+    - prepare
+    - converge
+    # - idempotence This role is not idempotent
+    - side_effect
+    - verify
+    - destroy
 verifier:
   name: inspec
   lint:
