--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -23,8 +23,9 @@
 
 - name: Desired State
   debug:
-    msg: "Desired state: {{ tomcat_service_state }}"
-  when:
-    - tomcat_service_manage
+    msg: "Configuring Desired State: {{ tomcat_service_state }}"
+  changed_when: true
+  check_mode: false
+  when: tomcat_service_manage | bool
   notify:
     - "{{ 'Restart' if tomcat_service_state == 'restarted' else 'Start' }} Tomcat"
