--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -7,6 +7,7 @@
     - role: ansible-role-tomcat
       tomcat_server_xml_template: "9.0/server.xml.j2"
       tomcat_web_xml_template: "9.0/web.xml.j2"
+      tomcat_context_xml_template: "9.0/context.xml.j2"
       tomcat_log4j2_enable: true
       tomcat_access_log_enable: true
       tomcat_secure_serverinfo_hide: true
