--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -5,9 +5,8 @@
 - name: Dependencies
   become: true
   package:
-    name: "{{ item }}"
+    name: "{{ tomcat_dependencies }}"
     state: present
-  with_items: "{{ tomcat_dependencies }}"
   notify: Restart Tomcat
 
 - name: Create Group
