--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: OS Family Vars
+  include_vars: "{{ item }}"
+  with_first_found:
+    - "family-{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.yml"
+    - "family-{{ ansible_os_family | lower }}.yml"
+
 - include: install.yml
 - include: configure.yml
 - include: log4j2.yml
