--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,7 +6,12 @@ driver:
 lint:
   name: yamllint
 platforms:
-  - name: "instance"
+  - name: "centos6"
+    image: "geerlingguy/docker-centos6-ansible"
+    pull: true
+    pre_build_image: true
+    command: "/sbin/init"
+  - name: "centos7"
     image: "geerlingguy/docker-centos7-ansible"
     pull: true
     pre_build_image: true
