Switched to Goss for tests
- support more operating systems

--- a/vars/family-debian.yml
+++ b/vars/family-debian.yml
@@ -4,3 +4,6 @@ tomcat_dependencies:
   - libtcnative-1
   - python-lxml
   - tar
+
+tomcat_jre_home: /usr/lib/jvm/java-8-openjdk-amd64/jre
+tomcat_java_home: /usr/lib/jvm/java-8-openjdk-amd64
