--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 ---
-dist: trusty
+dist: xenial
 sudo: required
 
 language: python
+python:
+  - "3.6"
+
 services:
   - docker
 
@@ -11,7 +14,6 @@ cache:
   directories:
     - $HOME/.cache/pip
     - $HOME/.gilt/clone
-    - $HOME/.inspec/cache
 
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
@@ -19,14 +21,14 @@ before_cache:
 before_install:
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+  - pip install pipenv
 
 install:
-  - pip install molecule docker
-  - bundle install --without=development --binstubs=vendor/bin
+  - pipenv install --dev
 
 script:
   # Run tests
-  - molecule test
+  - pipenv run molecule test
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
