--- a/molecule/default/group_vars/all/java.yml
+++ b/molecule/default/group_vars/all/java.yml
@@ -1,3 +1,3 @@
 ---
 java_packages:
-  - java-1.8.0-openjdk-headless
+  - "{{ 'java-1.8.0-openjdk-headless' if (ansible_os_family | lower) == 'redhat' else 'openjdk-8-jdk-headless' }}"
