--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,8 +11,10 @@ platforms:
     pull: true
     pre_build_image: true
     command: "/sbin/init"
+    capabilities:
+      - SYS_PTRACE
   - name: "centos7"
-    image: "geerlingguy/docker-centos7-ansible"
+    image: "bdellegrazie/centos-systemd:7"
     pull: true
     pre_build_image: true
     command: "/usr/sbin/init"
@@ -24,6 +26,37 @@ platforms:
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
     tmpfs:
       - "/run"
+  - name: "debian9"
+    image: "bdellegrazie/debian-systemd:9"
+    pull: true
+    pre_build_image: true
+    command: "/sbin/init"
+    # https://github.com/ansible/ansible/issues/18692
+    kill_signal: "RTMIN+3"
+    capabilities:
+      - SYS_ADMIN
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
+    tmpfs:
+      - "/run"
+      - "/run/lock"
+      - "/tmp"
+  - name: "ubuntu1804"
+    image: "bdellegrazie/ubuntu-systemd:18.04"
+    pull: true
+    pre_build_image: true
+    command: "/sbin/init --log-target=journal"
+    kill_signal: "RTMIN+3"
+    capabilities:
+      - SYS_ADMIN
+    security_opts:
+      - seccomp=unconfined
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
+    tmpfs:
+      - "/run"
+      - "/run/lock"
+      - "/tmp"
 provisioner:
   name: ansible
   config_options:
@@ -31,6 +64,7 @@ provisioner:
       fact_caching: jsonfile
       fact_caching_connection: $MOLECULE_EPHEMERAL_DIRECTORY/.facts
       fact_caching_timeout: 600
+      gather_timeout: 20
   lint:
     name: ansible-lint
 scenario:
@@ -48,6 +82,6 @@ scenario:
     - verify
     - destroy
 verifier:
-  name: inspec
+  name: goss
   lint:
-    name: rubocop
+    name: yamllint
