Add post startup delay during tests
- configurable stop timeout
- reduce stop timeout during tests

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -14,6 +14,7 @@
       tomcat_secure_httpheader_filter: true
       tomcat_secure_setcharacterencoding_filter: true
       tomcat_secure_failedrequest_filter: true
+      tomcat_service_timeout_stop_sec: 10
   post_tasks:
     - name: Test WebApp
       copy:
