Minor Lint Changes
- Update Changelog
- Minor pre-commit update
- No functional changes

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -4,6 +4,9 @@
   package:
     name: "{{ tomcat_dependencies }}"
     state: present
+  register: _install
+  until: _install is succeeded
+  retries: 3
   notify: Restart Tomcat
 
 - name: Create Group
