Use CentOS's built-in package for epel when testing

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -1,6 +1,12 @@
 ---
 - hosts: all
   roles:
-    - role: geerlingguy.repo-epel
-      when: ansible_os_family | lower == 'redhat'
     - geerlingguy.java
+  pre_tasks:
+    # CentOS provides epel-release package, use that
+    - name: Install epel
+      package:
+        name:
+          - epel-release
+          - cronie
+      when: ansible_os_family | lower == 'redhat'
