--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Test script
-tests/test.sh
-
 # build products...
 *.py[co]
 build
@@ -14,7 +11,6 @@ build
 .project
 .pydevproject
 .settings/
-.venv/
 
 # Mac OS X stuff...
 .DS_Store
@@ -26,11 +22,7 @@ build
 # Ansible stuff...
 *.retry
 ansible.cfg
+.venv/
 
-# Test kitchen
-.kitchen/
-.kitchen.local.yml
-
-# Ruby
-.bundle/
-vendor/
+# direnv
+.direnv/
