--- a/molecule/default/gilt.yml
+++ b/molecule/default/gilt.yml
@@ -1,4 +1,8 @@
 ---
+- git: 'https://github.com/geerlingguy/ansible-role-repo-epel.git'
+  version: '3.0.0'
+  dst: $MOLECULE_EPHEMERAL_DIRECTORY/roles/geerlingguy.repo-epel/
+
 - git: 'https://github.com/geerlingguy/ansible-role-java.git'
-  version: '1.9.7'
+  version: '1.10.0'
   dst: $MOLECULE_EPHEMERAL_DIRECTORY/roles/geerlingguy.java/
